--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel ="stylesheet" href="style.css">
+    <script src="https://use.fontawesome.com/5cadac0bf9.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <style>
       .instargram_post {
@@ -15,8 +17,24 @@
     </style>
   </head>
   <body>
-    <!-- navigation bar section -->
-    <div></div>
+    <div class="nav-wrap">
+      <div class="logo-insta">
+         <p>Instagram</p>
+      </div>
+      <div class="search-bar">
+          <input type ="text" class="search-input" placeholder="Search..">
+          
+      </div>
+      <div class="handy-icons">
+          <img class="icons" src="https://img.icons8.com/ios-glyphs/30/000000/home-page--v1.png"/>
+          <img class="icons" src="https://img.icons8.com/ios-glyphs/30/000000/chat.png"/>
+          <img class="icons" src="https://img.icons8.com/ios-glyphs/30/000000/sent.png"/>
+          <img class="icons" src="https://img.icons8.com/ios-glyphs/30/000000/apps.png"/>
+      </div>
+
+  </div>
+  </div>
+
 
     <!-- main wrap -->
     <div>
